// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled.div renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.625rem;
  border-radius: 3px;
  border: solid 1px #EEF1F2;
  box-shadow: 3px 3px rgba(238,241,242,0.47);
  box-sizing: border-box;
  margin: 0.625rem;
  -webkit-flex: 0 0 21.875rem;
  -ms-flex: 0 0 21.875rem;
  flex: 0 0 21.875rem;
  height: 206px;
  padding: 2.5rem 0.625rem;
  -webkit-transition: border-color 300ms ease;
  transition: border-color 300ms ease;
}

.c0:hover,
.c0:focus {
  border-color: #BAC3CB;
}

<div
  className="c0"
/>
`;

exports[`styled.div should apply alignCenter modifier 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.625rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 3px;
  border: solid 1px #EEF1F2;
  box-shadow: 3px 3px rgba(238,241,242,0.47);
  box-sizing: border-box;
  margin: 0.625rem;
  -webkit-flex: 0 0 21.875rem;
  -ms-flex: 0 0 21.875rem;
  flex: 0 0 21.875rem;
  height: 206px;
  padding: 2.5rem 0.625rem;
  -webkit-transition: border-color 300ms ease;
  transition: border-color 300ms ease;
}

.c0:hover,
.c0:focus {
  border-color: #BAC3CB;
}

<div
  className="c0"
/>
`;

exports[`styled.div should apply flexColumn modifier 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.625rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 3px;
  border: solid 1px #EEF1F2;
  box-shadow: 3px 3px rgba(238,241,242,0.47);
  box-sizing: border-box;
  margin: 0.625rem;
  -webkit-flex: 0 0 21.875rem;
  -ms-flex: 0 0 21.875rem;
  flex: 0 0 21.875rem;
  height: 206px;
  padding: 2.5rem 0.625rem;
  -webkit-transition: border-color 300ms ease;
  transition: border-color 300ms ease;
}

.c0:hover,
.c0:focus {
  border-color: #BAC3CB;
}

<div
  className="c0"
/>
`;

exports[`styled.div should apply fluid modifier 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.625rem;
  padding: 0;
  border-radius: 3px;
  border: solid 1px #EEF1F2;
  box-shadow: 3px 3px rgba(238,241,242,0.47);
  box-sizing: border-box;
  margin: 0.625rem;
  -webkit-flex: 0 0 21.875rem;
  -ms-flex: 0 0 21.875rem;
  flex: 0 0 21.875rem;
  height: 206px;
  padding: 2.5rem 0.625rem;
  -webkit-transition: border-color 300ms ease;
  transition: border-color 300ms ease;
}

.c0:hover,
.c0:focus {
  border-color: #BAC3CB;
}

<div
  className="c0"
/>
`;
